# saywrite

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  UI_IMPROVEMENTS_HANDOFF.md  build.rs  pyproject.toml
.claude/: settings.local.json
data/: io.github.fabio.SayWrite.appdata.xml  io.github.fabio.SayWrite.desktop  io.github.saywrite.Host.service  saywrite-host.service
docs/: README.md  architecture.md  holistic_review.md  implementation_plan.md  next_steps.md  roadmap.md  ship_todo.md  support_matrix.md
flatpak/: io.github.fabio.SayWrite.json
resources/: resources.gresource.xml  style.css
saywrite/: app.py  audio.py  backend.py  bridge_cli.py  cleanup.py  config.py  hardware.py  host_client.py  mock_dictation.py  model_installer.py  paths.py  providers.py  recorder.py  theme.css  transcription.py
saywrite_host/: backends.py  cli.py  hotkey.py  oneshot.py  server.py
scripts/: README.md  bootstrap-dev.sh  bootstrap-rust-dev.sh  download-local-model.sh  install-gnome-shortcut.sh  install-host.sh  run-global-dictation.sh  run-host-helper.sh  setup-whispercpp.sh
src/: app.rs  bridge.rs  cleanup.rs  config.rs  desktop_setup.rs  dictation.rs  host_api.rs  host_integration.rs  host_setup.rs  input.rs  insertion.rs  integration_api.rs  lib.rs  main.rs  model_installer.rs  native_integration.rs  runtime.rs  service.rs
src/ui/: async_poll.rs  main_window.rs  mod.rs  onboarding.rs  preferences.rs  shortcut_capture.rs
src/ui/main_window/: mod.rs  state.rs  widgets.rs
tests/: cleanup_tests.rs  test_audio.py  test_backend.py  test_cleanup.py  test_config.py  test_hardware.py  test_host_backends.py  test_host_client.py  test_hotkey.py  test_mock_dictation.py  test_model_installer.py  test_oneshot.py  test_recorder.py  test_transcription.py
