[package]
name = "saywrite"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Modern Linux dictation shell built with Rust, GTK4, and libadwaita."

[dependencies]
libadwaita = { version = "0.6", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_10"] }
gio = "0.19"
glib = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"

[build-dependencies]
glib-build-tools = "0.19"
