[package]
name = "saywrite"
version = "0.3.5"
edition = "2021"
license = "MIT"
description = "Modern Linux dictation shell built with Rust, GTK4, and libadwaita."

[dependencies]
libadwaita = { version = "0.6", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_10"] }
gio = "0.19"
glib = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
futures-util = "0.3"
ureq = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
zbus = { version = "3.15", default-features = false, features = ["tokio"] }

[build-dependencies]
glib-build-tools = "0.19"
