[package]
name = "saywrite"
version = "0.3.5"
edition = "2021"
license = "MIT"
description = "Modern Linux dictation shell built with Rust, GTK4, and libadwaita."
repository = "https://github.com/Fabio-RibeiroB/saywrite"

[dependencies]
libadwaita = { version = "0.6", package = "libadwaita", features = ["v1_4"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_10"] }
gio = "0.19"
glib = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
futures-util = "0.3"
ureq = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
zbus = { version = "3.15", default-features = false, features = ["tokio"] }

[build-dependencies]
glib-build-tools = "0.19"

[package.metadata.deb]
maintainer = "Fabio Ribeiro"
copyright = "2026 Fabio Ribeiro"
depends = "$auto, ibus, libglib2.0-bin, systemd"
section = "utility"
priority = "optional"
license-file = ["LICENSE", "0"]
extended-description = """\
SayWrite is a Linux dictation app with a GTK4/libadwaita interface, local or cloud
transcription, and desktop-aware text delivery.
.
Direct typing is brought up by the app itself on native builds.
.
Direct typing is currently validated on GNOME Wayland via IBus. Clipboard Mode
remains the fallback on unsupported or unvalidated environments."""
assets = [
    ["target/release/saywrite", "usr/bin/", "755"],
    ["scripts/run-global-dictation.sh", "usr/bin/saywrite-dictation.sh", "755"],
    ["data/io.github.fabio.SayWrite.desktop", "usr/share/applications/io.github.fabio.SayWrite.desktop", "644"],
    ["data/io.github.fabio.SayWrite.svg", "usr/share/icons/hicolor/scalable/apps/io.github.fabio.SayWrite.svg", "644"],
    ["data/io.github.fabio.SayWrite.appdata.xml", "usr/share/metainfo/io.github.fabio.SayWrite.metainfo.xml", "644"],
]
