[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "saywrite"
version = "0.1.0"
description = "Polished Linux dictation shell with Flatpak-first UX."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
saywrite = "saywrite.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
saywrite = ["theme.css"]
